--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,41 @@
+/* header {
+    padding-left: 15px; 
+} */
+/* Need to line this up with grid */
+
 body {
     position: relative;
+    background-color: rgb(243, 243, 243);
     }
+
+
+
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1100px;
+    padding: 10px;
+    margin: 0 auto;
+    gap: 15px;
+}
+
+.card {
+    display: flex;
+    background-color: #fff;
+    text-align:center;
+    border: 1px solid rgb(194, 194, 194);
+    border-radius: 10px;
+    padding: 3px;
+
+}
+
+.avatar {
+    border-radius: 50%;
+    height: 90px;
+    align-self: center;
+    padding: 8px;
+    /* Need to align it to the middle */
+}
 
 .overlay {
     position: absolute;
@@ -8,8 +43,8 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    background: rgba(100, 100, 100, 0.4)
-    }
+    background: rgba(100, 100, 100, 0.4);
+}
 
 .modal {
     width: 375px;
@@ -27,11 +62,11 @@ body {
     right: 15px;
     top: 5px;
     cursor: pointer;
-    }
+}
 
 .hidden {
     display: none;
-    }
+}
         
 
     
