--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,32 @@ header h3 {
 }
         
 @media screen and (min-width: 768px) {
+    header {
+        display: flex;
+        max-width: 355px;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: center;
+        margin-left: 30%;
+    }
+    
+    header h3 {
+        display: flex;
+        font-size: larger;
+        align-items: flex-start;
+    
+    }
+
+    #pageName {
+        align-self: center;
+    }
+    
+    #searchContainer {
+        border-radius: .5rem;
+        align-items: flex-end;
+        margin-bottom: 15px;
+        align-self: center;
+    }
     .grid-container {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -98,6 +124,16 @@ header h3 {
         padding: 10px;
         margin: 0 auto;
         gap: 15px;
+    }
+    .card {
+        display: flex;
+        max-width: 355px;
+        background-color: #fff;
+        text-align:center;
+        border: 1px solid rgb(194, 194, 194);
+        border-radius: 10px;
+        padding: 3px;
+        gap: 10px;
     }
 }
 
@@ -131,13 +167,6 @@ header h3 {
         border: 1px solid #778;
         border-radius: 5px;
         padding: 30px 20px;
-    }
-    
-    .modal-close {
-        position: absolute;
-        right: 15px;
-        top: 5px;
-        cursor: pointer;
     }
     
 }
